Fix unstuck footer

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -29,11 +29,12 @@ p {
 
 html,
 body,
-#app {
+#app,
+.g-app-content-wrapper {
   height: 100%;
 }
 
-#app {
+.g-app-content-wrapper {
   display: flex;
   flex-direction: column;
 }
